k8s/namespaces/wishlist/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/part-of: wishlist
  name: wishlist
  namespace: wishlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wishlist
      app.kubernetes.io/part-of: wishlist
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wishlist
        app.kubernetes.io/part-of: wishlist
    spec:
      automountServiceAccountToken: false
      containers:
      - name: wishlist
        image: gcr.io/trusted-builds/wishlist:latest
        imagePullPolicy: Always
        command:
        - bundle
        - exec
        - rails
        - server
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: gcp-credentials
          mountPath: /var/run/secrets/gcp
          readOnly: true
      volumes:
      - name: gcp-credentials
        secret:
          secretName: gcp-sa
