k8s/namespaces/wishlist/01-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wishlist
  namespace: wishlist
  labels:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/part-of: wishlist
spec:
  egress:
  - {}
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: wishlist
  policyTypes:
  - Ingress
  - Egress
